--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
 
   font_awesome_flutter: ^8.2.0
+  http: any
 
 
   # The following adds the Cupertino Icons font to your application.
